# unifi-security-report

./: Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  unifi-scanner.example.yaml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: issue-responder.yml  publish-container.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v0.2-alpha-MILESTONE-AUDIT.md  v0.3-alpha-REQUIREMENTS.md  v0.3-alpha-ROADMAP.md  v0.4-alpha-MILESTONE-AUDIT.md  v0.4-alpha-REQUIREMENTS.md  v0.4-alpha-ROADMAP.md
.planning/phases/01-foundation-api-connection/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-log-collection-parsing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-analysis-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-report-generation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES-DEDUPLICATION.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/unifi_scanner/: __init__.py  __main__.py  health.py  logging.py
tests/: test_analysis_engine.py  test_api_client.py  test_cloudflare.py  test_collectors.py  test_delivery_email.py  test_delivery_file.py  test_device_health_analyzer.py  test_device_health_integration.py  test_device_health_models.py  test_finding_store.py  test_health_rules.py  test_integrations.py  test_ips_analyzer.py  test_ips_integration.py  test_ips_models.py  test_ips_remediation.py  test_log_parser.py  test_models.py  test_mongo_ips_collector.py  test_reports_generator.py  test_reports_html.py  test_reports_text.py  test_rules.py  test_scheduler.py  test_state_manager.py  test_templates.py  test_timestamps.py  test_websocket.py  test_wireless_rules.py  test_ws_integration.py
(+170 files in other folders)
