[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-scanner"
version = "0.6.1b"
description = "Translate cryptic UniFi logs into understandable findings with actionable remediation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "UniFi Scanner Contributors" }
]
keywords = ["unifi", "network", "monitoring", "security", "logs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "Jinja2>=3.1.6",
    "structlog>=25.5",
    "tenacity>=8.3",
    "pybreaker>=1.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "python-dateutil>=2.8",
    "paramiko>=3.4",
    "APScheduler>=3.10,<4.0",
    "websockets>=14.0",
    "cloudflare>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
unifi-scanner = "unifi_scanner.__main__:main"

[project.urls]
Homepage = "https://github.com/unifi-scanner/unifi-scanner"
Documentation = "https://github.com/unifi-scanner/unifi-scanner#readme"
Issues = "https://github.com/unifi-scanner/unifi-scanner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_scanner"]

[tool.ruff]
target-version = "py39"  # Support Python 3.9+
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
